# folio

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yaml
.zed/: tasks.json
apps/: CMakeLists.txt  MinPathSum.cpp  QueensKillKing.cpp  VectionaryApp.cpp
cpp/: CMakeLists.txt
cpp/include/containers/: SimpleVec.hpp
cpp/src/containers/: CMakeLists.txt  SimpleVec.cpp
cpp/tests/: CMakeLists.txt  SimpleVecTests.cpp
src/algos/: CMakeLists.txt  Sorts.hpp
src/apps/: CMakeLists.txt  matmul_benchmark.cpp  rotate_image.cpp
src/containers/: BinaryTree.hpp  CMakeLists.txt  SimpleMat.hpp  SimpleVec.hpp
tests/: BinaryTreeTest.cpp  CMakeLists.txt  SimpleMatTests.cpp  SimpleVecTests.cpp  SortsTest.cpp
